--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container">
     	 <!-- Jumbotron Header -->
       <header class="jumbotron my-4">
-        <h1 class="display-3"> Cyton Daily Report</h1>
+        <h1 class="display-3"> Cytonn Daily Report</h1>
         <p class="lead">Contains all blogs written on daily basis by cytonn software developer interns; the blogs are mainly two...</p>
         <a href="#" class="btn btn-primary btn-lg">Read More</a>
       </header>
@@ -69,20 +69,22 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block  w-100" src="https://placekitten.com/320/220?image=2" alt="First slide">
+                      <img class="d-block  w-100" src="https://picsum.photos/320/220?image=0" alt="First slide">
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100" src="https://placekitten.com/320/220?image=2" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="https://placekitten.com/320/220?image=2" alt="Third slide">
+                      <img class="d-block w-100" src="https://placeimg.com/320/220/tech/grayscale" alt="Third slide">
                     </div>
                   </div>
                 </div>   
                   <!-- end of slider -->
                 <div class="card-body">
-                    <h2 class="card-title">Daily Blog Title</h2>
-                    <p class="card-text">Foundation is one of the advanced front-end frameworks for designing beautiful responsive websites built by ZURB in 2008, contrarily, Twitter Bootstrap is the most popular framework designed by Mark  Toto and Jacob Thornton.</p>
+                    <h2 class="card-title">Server Administration</h2>
+                    <p class="card-text">Linux Administration
+                    entails the upkeep, configuration, and reliable operation of a Linux system to ensure uptime,
+                    efficient performance, proper utilization of resources, and security of the system. The report</p>
                     <a href="#" class="btn btn-primary">Read More &rarr;</a>
                   </div>
                   <div class="card-footer text-muted">
@@ -98,19 +100,19 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="https://placekitten.com/320/220?image=2" alt="img slide">
+                      <img class="d-block w-100" src="https://picsum.photos/320/220?image=0" alt="img slide">
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100" src="https://placekitten.com/320/220?image=2" alt="img 2 slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="https://placekitten.com/320/220?image=2" alt="img 3 slide">
+                      <img class="d-block w-100" src="https://placeimg.com/320/220/tech/grayscale" alt="img 3 slide">
                     </div>
                   </div>
                 </div>   
               <!-- end of slider -->
               <div class="card-body">
-                  <h2 class="card-title">Daily Report Title</h2>
+                  <h2 class="card-title">Foundation and Bootstrap</h2>
                   <p class="card-text">Foundation is one of the advanced front-end frameworks for designing beautiful responsive websites built by ZURB in 2008, contrarily, Twitter Bootstrap is the most popular framework designed by Mark  Toto and Jacob Thornton.</p>
                   <a href="#" class="btn btn-primary">Read More &rarr;</a>
                 </div>
@@ -153,7 +155,7 @@
 
           <!-- Search Widget -->
           <div class="card my-4 ">
-            <h5 class="card-header ">Search</h5>
+            <h5 class="card-header bg-primary text-light">Search</h5>
             <div class="card-body">
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search for...">
@@ -169,11 +171,11 @@
 
           <!-- nost viewed -->
           <div class="card my-4 ">
-            <h5 class="card-header">Most Viewed</h5>
+            <h5 class="card-header bg-primary text-light" >Most Viewed</h5>
             <div class="card-body text-secondary">
               <ol class="list-group list-group-flush">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                  <a href="#" class="card-link">Html and Bootstrap</a> <span class="badge badge-success badge-pill">5</span>
+                  <a href="#" class="card-link">Foundation and Bootstrap</a> <span class="badge badge-success badge-pill">5</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="#" class="card-link">Css and Sass</a>  <span class="badge badge-warning badge-pill">3</span>  
@@ -191,19 +193,32 @@
 
             <!-- Categories Widget -->
           <div class="card my-4 ">
-            <h5 class="card-header">Categories</h5>
+            <h5 class="card-header bg-primary text-light">Categories</h5>
             <div class="card-body">
               <div class="row">
                 <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
+                  <ul class="list-unstyled list-group">
                     <li>
-                      <a href="#">Blogs</a>
+                      <a href="#" class="list-group-item">Blogs</a>
                     </li>
                     <li>
-                      <a href="#">Reports</a>
+                      <a href="#" class="list-group-item">Reports</a>
                     </li>
                     <li>
-                      <a href="#">Others</a>
+                      <a href="#" class="list-group-item">Others</a>
+                    </li>
+                  </ul>
+                </div>
+                 <div class="col-lg-6">
+                  <ul class="list-unstyled list-group">
+                    <li>
+                      <a href="#" class="list-group-item">Tech</a>
+                    </li>
+                    <li>
+                      <a href="#" class="list-group-item">assignment</a>
+                    </li>
+                    <li>
+                      <a href="#" class="list-group-item">discussions</a>
                     </li>
                   </ul>
                 </div>
