--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                       <img class="d-block w-100" src="https://placekitten.com/320/220?image=2" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="https://placeimg.com/320/220/tech/grayscale" alt="Third slide">
+                      <img class="d-block w-100" src="https://picsum.photos/320/220?image=0" alt="Third slide">
                     </div>
                   </div>
                 </div>   
@@ -106,7 +106,7 @@
                       <img class="d-block w-100" src="https://placekitten.com/320/220?image=2" alt="img 2 slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="https://placeimg.com/320/220/tech/grayscale" alt="img 3 slide">
+                      <img class="d-block w-100" src="https://picsum.photos/320/220?image=0" alt="img 3 slide">
                     </div>
                   </div>
                 </div>   
